--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jb-v-datatable-crud",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jbmchd/jb-v-datatable-crud#readme",
   "dependencies": {
+    "jb-v-plugin-global": "1.0.0",
     "vuetify-dialog": "^0.3.4",
     "jb-v-dialog": "1.0.0"
   }
