--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@metta/mt-v-datatable-crud",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/mettatecnologia/mt-v-datatable-crud#readme",
   "dependencies": {
-    "vuetify-dialog": "^0.3.4",
-    "@metta/mt-v-plugin-global": "1.0.1",
-    "@metta/mt-v-dialog": "1.0.1"
+    "vuetify-dialog": "1.0.0-alpha.1",
+    "@metta/mt-v-plugin-global": "2.0.0",
+    "@metta/mt-v-dialog": "2.0.0"
   }
 }
